<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    tools:context=".ui.main.imagedetail.ImageDetailFragment">

    <TextView
        android:id="@+id/label_title"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/title"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/image_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Electrulux vaccum cleaner"
        />
    <ImageView
        android:id="@+id/original_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/ic_logo"
        app:layout_constraintTop_toBottomOf="@+id/image_title"
        android:contentDescription="@string/original_image" />

    <TextView
        android:id="@+id/label_public"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/is_image_public"
        app:layout_constraintTop_toBottomOf="@+id/original_image"
        />
    <TextView
        android:id="@+id/textPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/label_public"
        app:layout_constraintTop_toTopOf="@+id/label_public"
        tools:text="Yes"
        />
</androidx.constraintlayout.widget.ConstraintLayout>