<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingEnd="20dp"
    tools:context=".ui.main.seachImage.SearchImageFragment">


    <TextView
        android:id="@+id/repositoryHeadingTV"
        android:layout_width="166dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:text="@string/images_library_using_flikr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="30dp"
        android:textAppearance="@style/heading_20"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/searchQueryET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repositoryHeadingTV"
        android:background="@drawable/ic_rectangule_grey_bg"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_search_icon"
        android:drawableLeft="@drawable/ic_search_icon"
        android:drawablePadding="15dp"
        android:hint="@string/search_images"
        android:paddingStart="15dp"
        android:paddingLeft="15dp" />

    <TextView
        android:id="@+id/resultSizeIndTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:textAppearance="@style/text_light_14"
        android:text="@string/results"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchQueryET"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imageListRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        tools:listitem="@layout/item_flikr_photo"
        app:layout_constraintTop_toBottomOf="@+id/resultSizeIndTV"
        android:layout_marginTop="20dp"

        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />

    <TextView
        android:visibility="gone"
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>